--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <div class="wrapper">
       <h1 class="title">kayac member page</h1>
       <ul class="member-list js-member-root"></ul><a href="#" class="more js-more">もっと見る</a>
+      <footer class="footer"><small>&copy; Kayac inc.</small></footer>
       <script type="text/lodash" id="template-member">
         <li class="member-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="member-list__grid"><img src="<%= grid_url %>" class="member-list__grid__img">
             <div class="member-list__grid__name"><%= name %></div></a></li>
