--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 class="title">kayac member page</h1>
+      <header class="header">
+        <h1 class="title">kayac member page</h1>
+      </header>
       <ul class="member-list js-member-root"></ul><a href="#" class="more js-more">もっと見る</a>
       <footer class="footer"><small>&copy; Kayac inc.</small></footer>
       <script type="text/lodash" id="template-member">
