2ページ構成になったので整理

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
           </ul>
         </nav>
       </header>
-      <ul class="member-list js-member-root"></ul><a href="#" class="more js-more">もっと見る</a>
+      <ul class="news-list js-news-root"></ul>
       <footer class="footer"><small>&copy; Kayac inc.</small></footer>
-      <script type="text/lodash" id="template-member">
-        <li class="member-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="member-list__grid"><img src="<%= grid_url %>" class="member-list__grid__img">
-            <div class="member-list__grid__name"><%= name %></div></a></li>
+      <script type="text/lodash" id="template-news">
+        <li class="news-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="news-list__grid"><img src="<%= grid_url %>" class="news-list__grid__img">
+            <div class="news-list__grid__name"><%= name %></div></a></li>
       </script>
     </div>
     <!-- javascript-->
