--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <h1 class="header__title">kayac web site</h1>
         <nav>
           <ul class="header__menu">
-            <li class="header__menu__item"><a href="/" class="header__menu__btn js-menu-top">news</a></li>
+            <li class="header__menu__item"><a href="/" class="header__menu__btn js-menu-news">news</a></li>
             <li class="header__menu__item"><a href="/member.html" class="header__menu__btn js-menu-member">member</a></li>
           </ul>
         </nav>
@@ -36,8 +36,7 @@
       <ul class="news-list js-news-root"></ul>
       <footer class="footer"><small>&copy; Kayac inc.</small></footer>
       <script type="text/lodash" id="template-news">
-        <li class="news-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="news-list__grid"><img src="<%= grid_url %>" class="news-list__grid__img">
-            <div class="news-list__grid__name"><%= name %></div></a></li>
+        <li class="news-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="news-list__btn"><%= name %></a></li>
       </script>
     </div>
     <!-- javascript-->
