--- a/public/member.html
+++ b/public/member.html
@@ -28,7 +28,7 @@
         <h1 class="header__title">kayac web site</h1>
         <nav>
           <ul class="header__menu">
-            <li class="header__menu__item"><a href="/" class="header__menu__btn js-menu-top">news</a></li>
+            <li class="header__menu__item"><a href="/" class="header__menu__btn js-menu-news">news</a></li>
             <li class="header__menu__item"><a href="/member.html" class="header__menu__btn js-menu-member">member</a></li>
           </ul>
         </nav>
