--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,13 @@
           </ul>
         </nav>
       </header>
-      <ul class="news-list js-news-root"></ul>
+      <main class="main">
+        <ul class="news-list js-news-root"></ul>
+        <script type="text/lodash" id="template-news">
+          <li class="news-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="news-list__btn"><%= name %></a></li>
+        </script>
+      </main>
       <footer class="footer"><small>&copy; Kayac inc.</small></footer>
-      <script type="text/lodash" id="template-news">
-        <li class="news-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="news-list__btn"><%= name %></a></li>
-      </script>
     </div>
     <!-- javascript-->
     <script src="js/kayacSiteMock.js"></script>
