--- a/public/member.html
+++ b/public/member.html
@@ -36,8 +36,8 @@
       <main class="main">
         <ul class="member-list js-member-root"></ul><a href="#" class="more js-more">もっと見る</a>
         <script type="text/lodash" id="template-member">
-          <li class="member-list__item"><a href="http://www.kayac.com<%= url %>" target="_blank" class="member-list__grid"><img src="<%= grid_url %>" class="member-list__grid__img">
-              <div class="member-list__grid__name"><%= name %></div></a></li>
+          <li class="member-list__item"><a href="http://www.kayac.com<%- url %>" target="_blank" class="member-list__grid"><img src="<%- grid_url %>" class="member-list__grid__img">
+              <div class="member-list__grid__name"><%- name %></div></a></li>
         </script>
       </main>
       <footer class="footer"><small>&copy; Kayac inc.</small></footer>
