--- a/public/member.html
+++ b/public/member.html
@@ -25,7 +25,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1 class="header__title">kayac web site</h1>
+        <h1 class="header__title"><span>面白法人カヤック</span></h1>
         <nav>
           <ul class="header__menu">
             <li class="header__menu__item"><a href="/" class="header__menu__btn js-menu-news">news</a></li>
